<resources>
    <string name="app_name">Calendar_for_NM</string>
    <string name="Number">Number</string>
    <string name="Name">Name</string>
    <string name="LastName">Last Name</string>
    <string name="Comment">About</string>
    <string name="Pay">Pay</string>

    <string name="Top40">ClentsTOP40</string>
    <string name="serch_1tab">Search</string>
    <string name="serch_2tab">Top List</string>
    <string name="serch_button">Search Client</string>
    <string name="serch_exp_num">Num</string>
    <string name="serch_exp_name">Name</string>
    <string name="edit_user_exist_num">This selphone number is present</string>

    <string name="set_view">View Settings</string>
    <string name="set_sumview">appearance settings</string>

    <string name="set_view_textSize">Set text Size</string>
    <string name="set_view_textColor">Set text Color</string>
    <string name="set_view_back">Set View Background</string>
    <string name="set_view_sumtextSize">text Size</string>
    <string name="set_view_sumtextColor">text Color</string>
    <string name="set_view_sumback">background</string>


    <string name="set_user_interface">User interface settings</string>
    <string name="set_user_suminterface">display settings</string>

    <string name="set_user_startTime">Get started with: </string>
    <string name="set_user_endTime">Finish in: </string>
    <string name="set_user_HideAmount">Hide amount order</string>
    <string name="set_user_sumstartTime">open day </string>
    <string name="set_user_sumendTime">close day </string>
    <string name="set_user_sumHideAmount">amount display settings</string>

    <string name="set_clearDB">Сleaning data base</string>
    <string name="set_sumclearDB">delete old records</string>

    <string name="set_DB_version">Version DB: </string>
    <string name="set_DB_size">Size DB: </string>
    <string name="set_DB_count_row">number of rows in the database</string>
    <string name="set_DB_title">delete records older </string>
    <string name="set_DB_button">Clean DB </string>
    <string name="set_DB_backup_del">delete backup </string>
    <string name="set_DB_backup_check">checkout backup </string>


    <string name="set_sync">Sync settings</string>
    <string name="set_sumSync">sending data to remote storage</string>

    <string name="set_syncLogin">Login: </string>
    <string name="set_syncClientId">Identificator: </string>
    <string name="set_syncButtonToken">Get OAuth token</string>
    <string name="set_syncFlag">Synk remote storage</string>


    <string name="dw_mo">Mo</string>
    <string name="dw_tu">Tu</string>
    <string name="dw_we">We</string>
    <string name="dw_th">Th</string>
    <string name="dw_fr">Fr</string>
    <string name="dw_sa">Sa</string>
    <string name="dw_su">Su</string>

    <string name="mn_jan">JAN</string>
    <string name="mn_feb">FEB</string>
    <string name="mn_mar">MAR</string>
    <string name="mn_apr">APR</string>
    <string name="mn_may">MAY</string>
    <string name="mn_jun">JUN</string>
    <string name="mn_jul">JUL</string>
    <string name="mn_aug">AUG</string>
    <string name="mn_sep">SEP</string>
    <string name="mn_oct">OCT</string>
    <string name="mn_now">NOV</string>
    <string name="mn_dec">DEC</string>

    <string name="fullCard_del_title">Delete order</string>
    <string name="fullCard_del_numb">Number: </string>
    <string name="fullCard_del_start">from: </string>
    <string name="fullCard_del_end">to: </string>
    <string name="fullCard_del_bCancel">Cancel</string>
    <string name="fullCard_del_bDelete">Delete </string>

    <string name="fullCard_recurring">Recurring</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="fullCard_count">Number of visits</string>
    <string name="fullCard_lastVisit">Last visit </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="verDB">Версия базы:</string>
    <string name="countOrd">Кол-во записей:</string>
    <string name="sizeDB">Размер базы:</string>
    <string name="conditionClear">Удалить записи старше:</string>

    <string name="errCreateCld">Calendar in not created</string>
    <string name="failCreateEvent">Create event is failed</string>
    <string name="failDeleteEvent">Delete event is failed</string>
    <string name="failCreateLayer">Create layer is failed</string>

    <string name="locale">en</string>
    <string name="call">Call</string>
    <string name="ok">OK</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
