<?xml version="1.0" encoding="utf-8"?>
<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">

<header
    android:fragment="com.example.zsoft.calendar_for_nm.preference$PrefFragment"
    android:title="@string/set_view"
    android:summary="@string/set_sumview"/>
    <header/>
    <header
        android:fragment="com.example.zsoft.calendar_for_nm.preference$PrefUserSettingsFragment"
        android:title="@string/set_user_interface"
        android:summary="@string/set_user_suminterface"/>
    <header/>
    <header
        android:fragment="com.example.zsoft.calendar_for_nm.preference$PrefClearDB"
        android:title="@string/set_clearDB"
        android:summary="@string/set_sumclearDB"/>
    <header/>
    <header
        android:fragment="com.example.zsoft.calendar_for_nm.preference$Yandex_sync"
        android:title="@string/set_sync"
        android:summary="@string/set_sumSync"/>
    <header/>
</preference-headers>
