<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:defaultValue="12"
        android:entries="@array/text_size"
        android:entryValues="@array/text_size"
        android:key="list_size"
        android:summary="@string/set_view_sumtextSize"
        android:title="@string/set_view_textSize" />
    <ListPreference
        android:defaultValue="White"
        android:entries="@array/text_color"
        android:entryValues="@array/text_color"
        android:key="list_color"
        android:summary="@string/set_view_sumtextColor"
        android:title="@string/set_view_textSize" />
    <ListPreference
        android:entries="@array/background"
        android:entryValues="@array/background"
        android:key="background"
        android:summary="@string/set_view_sumback"
        android:title="@string/set_view_back" />


</PreferenceScreen>