<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutUserEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:gravity="center|start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInpLayNameUserEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/eUserEditName"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Name"
                android:inputType="textPersonName"
                android:singleLine="false"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="56dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInpLayLastNameUserEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp">

            <EditText
                android:id="@+id/eUserEditLastName"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/LastName"
                android:inputType="textPersonName"
                android:singleLine="false"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="56dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInpLayNumUserEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="231dp">

            <EditText
                android:id="@+id/eUserEditNnm"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInpLayAboutUserEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/eUserEditAbout"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Comment"
                android:inputType="textPersonName"
                android:singleLine="false"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="56dp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/bUserEdit"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.954" />

</LinearLayout>